# betcha

./: .gitignore  Makefile  Makefile.in  README.md  configure.ac
www/: composer.json
www/app/: AppKernel.php
www/app/config/: config.yml  parameters.yml.dist  routing.yml
www/src/Codeways/UserBundle/: CodewaysUserBundle.php
www/src/Codeways/UserBundle/Controller/: DefaultController.php
www/src/Codeways/UserBundle/DependencyInjection/: CodewaysUserExtension.php  Configuration.php
www/src/Codeways/UserBundle/Entity/: User.php
www/src/Codeways/UserBundle/Resources/config/: routing.yml  services.yml
www/src/Codeways/UserBundle/Resources/public/css/: bootstrap-responsive.css  style.css
www/src/Codeways/UserBundle/Resources/views/: layout.html.twig  navbar.html.twig
www/src/Codeways/UserBundle/Resources/views/Default/: index.html.twig
www/src/Codeways/UserBundle/Resources/views/Security/: login.html.twig
www/src/Codeways/UserBundle/Tests/Controller/: DefaultControllerTest.php
www/web/: app.php  app_dev.php
